# shadow-drone-ros

./: CMakeLists.txt  README.md  package.xml
doc/: README.md  system_overview.md
launch/: shadow_launch.py
rviz/: shadow_drone.rviz
urdf/: shadow_drone.urdf  shadow_drone.xacro
worlds/: empty.world  living_room.world
