<?xml version="1.0"?>
<package format="3">
  <name>shadow_drone</name>
  <version>0.0.1</version>
  <description>Shadow drone simulation</description>
  <maintainer email="zero@example.com">Zero</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>gazebo_ros</depend>
  <depend>xacro</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
